k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service-worker
  template:
    metadata:
      labels:
        app: email-service-worker
    spec:
      containers:
        - name: email-service-worker
          image: wojdzie/email-service-worker:1.0.8
          ports:
            - containerPort: 8090
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: new-account-signup-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: new-account-signup-service
  template:
    metadata:
      labels:
        app: new-account-signup-service
    spec:
      containers:
        - name: new-account-signup-service
          image: wojdzie/new-account-signup-service:1.0.7
          ports:
            - containerPort: 8091
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: password-reset-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: password-reset-service
  template:
    metadata:
      labels:
        app: password-reset-service
    spec:
      containers:
        - name: password-reset-service
          image: wojdzie/password-reset-service:1.0.7
          ports:
            - containerPort: 8092
