k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-service-worker-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: email-service-worker
  ports:
    - protocol: TCP
      port: 90
      targetPort: 8090

---

apiVersion: v1
kind: Service
metadata:
  name: new-account-signup-service-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: new-account-signup-service
  ports:
    - protocol: TCP
      port: 91
      targetPort: 8091

---

apiVersion: v1
kind: Service
metadata:
  name: password-reset-service-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: password-reset-service
  ports:
    - protocol: TCP
      port: 92
      targetPort: 8092
